// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`component transforms svg 1`] = `
"import React from 'react'
import SVG from './Icon'

const Icon = (props) => (
  <SVG width=\\"24\\" height=\\"24\\" viewBox=\\"0 0 24 24\\" {...props}>
    <path d=\\"M9 16.17L4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z\\" />
  </SVG>
)

export default Icon
"
`;

exports[`component transforms svg to ESM format 1`] = `
"var __assign = Object.assign
import React from 'react'
import SVG from './Icon'
const Heart = (props) =>
  /* @__PURE__ */ React.createElement(
    SVG,
    __assign(
      __assign(
        {
          width: '24',
          height: '24',
          viewBox: '0 0 24 24',
        },
        props
      ),
      {
        className:
          'Mdi Mdi--Heart' + (props.className ? \` \${props.className}\` : ''),
      }
    ),
    /* @__PURE__ */ React.createElement('path', {
      d: 'M9 16.17L4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z',
    })
  )
var stdin_default = Heart
export {stdin_default as default}
"
`;

exports[`component transforms svg with baseClassName 1`] = `
"import React from 'react'
import SVG from './Icon'

const Heart = (props) => (
  <SVG
    width=\\"24\\"
    height=\\"24\\"
    viewBox=\\"0 0 24 24\\"
    {...props}
    className={
      'Mdi Mdi--Heart' + (props.className ? \` \${props.className}\` : '')
    }
  >
    <path d=\\"M9 16.17L4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z\\" />
  </SVG>
)

export default Heart
"
`;

exports[`component transforms svg with options 1`] = `
"import React from 'react'
import SVG from 'base-icon'

const Component = (props) => (
  <SVG width=\\"24\\" height=\\"24\\" viewBox=\\"0 0 24 24\\" {...props}>
    <path d=\\"M9 16.17L4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z\\" />
  </SVG>
)

Component.defaultProps = {width: 24, height: 24}

export default Component
"
`;
